# neuromitosis

./: .gitignore  Cargo.toml  LICENSE  MCP.md  README.md  manifesto.md  package.json  pyproject.toml
crates/canvas/: Cargo.toml
crates/canvas/src/: graph.rs  lib.rs  node.rs  yarn.rs
crates/channels/: Cargo.toml
crates/channels/src/: lib.rs
crates/codec/: Cargo.toml
crates/codec/src/: lib.rs
crates/loom/: Cargo.toml
crates/loom/src/: executor.rs  lib.rs  runtime.rs  topology.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs
crates/molt/: Cargo.toml
crates/molt/src/: lib.rs
crates/providers/: Cargo.toml
crates/providers/src/: lib.rs
crates/security/: Cargo.toml
crates/security/src/: lib.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs
crates/trustclaw/: Cargo.toml
crates/trustclaw/src/: lib.rs
docs/: architecture.md  codec.md  desktop.md  glossary.md  manifesto.md  trustclaw.md
src/: main.rs
src/bridge/: __init__.py  __main__.py
src/canvas/: __init__.py  node.py
src/codec/: __init__.py  decoder.py  encoder.py  format.py  library.py
src/loom/: __init__.py  runtime.py
src/molt/: __init__.py  evaluator.py
src/trustclaw/: __init__.py  agent.py  config.py  memory.py  skills.py
src/workflows/: morning_ritual.py
tests/: test_codec.py  test_node.py  test_trustclaw.py
