[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "midio"
version = "0.1.0"
description = "Visual canvas for composing AI agent swarms"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Yael", email = "yael.eureka@gmail.com"},
]
keywords = ["ai", "agents", "swarm", "canvas", "orchestration", "loom"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Repository = "https://github.com/yaeleureka-afk/midio"

[tool.pytest.ini_options]
testpaths = ["tests"]
