[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "neuromitosis"
version = "0.1.0"
description = "💿 A learning network powered by llm.store — encode, share, and run AI agent skills"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Yael", email = "yael.eureka@gmail.com"},
]
keywords = ["ai", "agents", "skills", "mcp", "composio", "workflow", "disc", "llm"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://llm.store"
Repository = "https://github.com/yaeleureka-afk/neuromitosis"
Documentation = "https://github.com/yaeleureka-afk/neuromitosis/tree/main/docs"

[project.optional-dependencies]
dev = ["pytest>=7.0", "black", "ruff"]
llm = ["anthropic", "openai"]
composio = ["composio-core"]

[tool.setuptools.packages.find]
include = ["src*"]
