[package]
name = "neuromitosis-canvas"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Graph primitives for Neuromitosis — nodes, yarns, ports, canvas."

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
