[package]
name = "neuromitosis-channels"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "I/O channels — CLI, Telegram, Discord, Slack, webhook."

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
