[package]
name = "neuromitosis-loom"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Topological execution engine for Neuromitosis — weaves Canvas DAGs."

[dependencies]
neuromitosis-canvas = { path = "../canvas" }
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
