[package]
name = "neuromitosis-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "MCP server — Model Context Protocol for tool discovery."

[dependencies]
neuromitosis-tools = { path = "../tools" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
