[package]
name = "neuromitosis-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Tool system — shell, files, Composio, browser."

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
